RESOLVED FIXED265876
AX: Remove WTR::AccessibilityUIElement::isIsolatedObject since it should not be used in any test.
https://bugs.webkit.org/show_bug.cgi?id=265876
Summary AX: Remove WTR::AccessibilityUIElement::isIsolatedObject since it should not ...
Andres Gonzalez
Reported 2023-12-05 08:24:19 PST
Whether or not the underlying object is isolated should be irrelevant to the client, so it should not be used in any test.
Attachments
Patch (10.16 KB, patch)
2023-12-05 08:52 PST, Andres Gonzalez
no flags
Patch (10.16 KB, patch)
2023-12-05 17:17 PST, Andres Gonzalez
no flags
Patch (10.16 KB, patch)
2023-12-06 08:51 PST, Andres Gonzalez
no flags
Patch (10.34 KB, patch)
2023-12-06 11:39 PST, Andres Gonzalez
no flags
Patch (5.31 KB, patch)
2023-12-07 10:48 PST, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2023-12-05 08:24:27 PST
Andres Gonzalez
Comment 2 2023-12-05 08:52:12 PST
Andres Gonzalez
Comment 3 2023-12-05 17:17:50 PST
Andres Gonzalez
Comment 4 2023-12-06 08:51:16 PST
Andres Gonzalez
Comment 5 2023-12-06 11:39:04 PST
Andres Gonzalez
Comment 6 2023-12-07 10:48:07 PST
EWS
Comment 7 2023-12-07 12:19:51 PST
Committed 271689@main (5cf20e0973b7): <https://commits.webkit.org/271689@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468926 [details].
Note You need to log in before you can comment on or make changes to this bug.