AX: Remove WTR::AccessibilityUIElement::isIsolatedObject since it should not be used in any test. https://bugs.webkit.org/show_bug.cgi?id=265876 <rdar://problem/119188944>

Reviewed by Tyler Wilcock.

Whether or not the underlying AX object is isolated should be irrelevant to the client, so no test should need to call this. This was added in an early stage of the ITM project for debugging purposes and is not exposed or used by any active test.

* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper additionalAccessibilityAttributeNames]):
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::isIsolatedObject const): Deleted.
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* Tools/WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::isIsolatedObject const): Deleted.

Canonical link: https://commits.webkit.org/271689@main