Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp
@@ -60,13 +60,6 @@ bool AccessibilityUIElement::isValid() const
 #endif
 }
 
-#if !ENABLE(ACCESSIBILITY_ISOLATED_TREE)
-bool AccessibilityUIElement::isIsolatedObject() const
-{
-    return false;
-}
-#endif
-
 // iOS specific methods
 #if !PLATFORM(IOS_FAMILY)
 JSRetainPtr<JSStringRef> AccessibilityUIElement::identifier() { return nullptr; }
